@@ -60,6 +60,43 @@
     (setq list (funcall sym list "first" 1 #'string=))
     (should (eq (compat-call plist-get list "first" #'string=) 1))))
 
+(ert-deftest pos-bol ()
+  (with-temp-buffer
+    (insert (propertize "one" 'field 1)
+            (propertize "two" 'field 2)
+            (propertize "tri" 'field 3)
+            "\n")
+    (insert (propertize "one" 'field 1)
+            (propertize "two" 'field 2)
+            (propertize "tri" 'field 3)
+            "\n")
+    (goto-char 5)
+    (should-equal (line-beginning-position) 4)
+    (should-equal (line-end-position) 7)
+    (should-equal (pos-bol) 1)
+    (should-equal (pos-eol) 10)
+    (should-equal (line-beginning-position 1) 4)
+    (should-equal (line-end-position 1) 7)
+    (should-equal (pos-bol 1) 1)
+    (should-equal (pos-eol 1) 10)
+    (should-equal (line-beginning-position 2) 11)
+    (should-equal (line-end-position 2) 20)
+    (should-equal (pos-bol 2) 11)
+    (should-equal (pos-eol 2) 20)
+    (goto-char 15)
+    (should-equal (line-beginning-position) 14)
+    (should-equal (line-end-position) 17)
+    (should-equal (pos-bol) 11)
+    (should-equal (pos-eol) 20)
+    (should-equal (line-beginning-position 1) 14)
+    (should-equal (line-end-position 1) 17)
+    (should-equal (pos-bol 1) 11)
+    (should-equal (pos-eol 1) 20)
+    (should-equal (line-beginning-position 0) 1)
+    (should-equal (line-end-position 0) 10)
+    (should-equal (pos-bol 0) 1)
+    (should-equal (pos-eol 0) 10)))
+
 (ert-deftest image-property ()
   (let ((image (list 'image)))
     ;; Add properties.
